--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
         <script src="./data.js"></script>
         <script src="./radar.js"></script>
+        <script src="./model.js"></script>
     </head>
     <body>
         <canvas id="canvas" width="1024", height="1024"></canvas>
