--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script src="http://documentcloud.github.com/underscore/underscore-min.js"></script>
         <script src="./data.js"></script>
+        <script src="./main.js"></script>
+        <script src="./filter.js"></script>
         <script src="./radar.js"></script>
         <script src="./model.js"></script>
     </head>
     <body>
         <canvas id="canvas" width="1024", height="1024"></canvas>
+
+        <div style="float:left; padding:30">
+            <h2>Accelerations</h2>
+            M - <span id='acc-m'>0</span> <br/>
+            H - <span id='acc-h'>0</span> <br/>
+            E - <span id='acc-e'>0</span> <br/>
+            
+            <h2>Breakings</h2>
+            M - <span id='break-m'>0</span> <br/>
+            H - <span id='break-h'>0</span> <br/>
+            E - <span id='break-e'>0</span> <br/>
+            
+            <h2>Cornerings</h2>
+            M - <span id='corn-m'>0</span> <br/>
+            H - <span id='corn-h'>0</span> <br/>
+            E - <span id='corn-e'>0</span> <br/>
+
+        </div>
     </body>
 </html>
